--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
         "lib": [
           "ES2019"
         ],
-        "declaration": true
+        "declaration": true,
+
+        "esModuleInterop": true
     },
     "include": [
         "src/**/*"
