--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     ]
   },
   "dependencies": {
+    "@curveball/http-errors": "^0.3.0",
     "ajv": "^6.12.6",
     "better-ajv-errors": "^0.7.0"
   }
