--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "@curveball/http-errors": "^0.3.0",
     "ajv": "^6.12.6",
     "better-ajv-errors": "^0.7.0"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
