--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     ]
   },
   "dependencies": {
+    "@curveball/controller": "^0.3.0",
     "@curveball/http-errors": "^0.3.0",
+    "@curveball/links": "^0.1.5",
     "ajv": "^7.0.3",
     "ajv-formats": "^1.5.1",
     "better-ajv-errors": "^0.7.0"
