--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
         "lib": [
           "ES2019"
         ],
-        "declaration": true,
-        "esModuleInterop": true
+        "declaration": true
     },
     "include": [
         "src/**/*"
