--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "@curveball/controller": "^0.3.0",
     "@curveball/http-errors": "^0.4.0",
     "@curveball/links": "^0.1.5",
+    "@stoplight/better-ajv-errors": "^0.1.1",
     "ajv": "^8.4.0",
-    "ajv-formats": "^2.1.0",
-    "better-ajv-errors": "^0.7.0"
+    "ajv-formats": "^2.1.0"
   }
 }
