--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/curveball/validatori.git"
+    "url": "git+https://github.com/curveball/validator.git"
   },
   "files": [
     "package.json",
