Explose ajv and schemas in Context
This lets other middlewares directly call Ajv with all the compiled
schemas.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/curveball/validator#readme",
   "devDependencies": {
+    "@curveball/bodyparser": "^0.4.14",
     "@curveball/core": "^0.17",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^9.0.0",
