--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "prepublishOnly": "make build",
-    "test": "make lint test",
+    "test": "make test",
+    "lint": "make lint",
     "tsc": "tsc",
     "start": "make start"
   },
@@ -27,15 +28,15 @@
   "homepage": "https://github.com/curveball/validator#readme",
   "devDependencies": {
     "@curveball/bodyparser": "^0.4.14",
-    "@curveball/core": "^0.17",
+    "@curveball/core": "^0.19.0",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^12.20.13",
+    "@types/node": "^14.18.21",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "chai": "^4.3.0",
     "eslint": "^8.6.0",
-    "mocha": "^9.1.4",
+    "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.1.5"
@@ -48,6 +49,9 @@
   },
   "peerDependencies": {
     "@curveball/core": ">=0.16.1 <1"
+  },
+  "engines": {
+    "node": ">= 14"
   },
   "mocha": {
     "require": "ts-node/register",
