--- a/package.json
+++ b/package.json
@@ -28,17 +28,18 @@
   "homepage": "https://github.com/curveball/validator#readme",
   "devDependencies": {
     "@curveball/bodyparser": "^0.4.14",
-    "@curveball/core": "^0.19.0",
+    "@curveball/kernel": "^0.20.0",
     "@types/chai": "^4.2.15",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^14.18.21",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^14.18.26",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "chai": "^4.3.0",
-    "eslint": "^8.6.0",
+    "eslint": "^8.23.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "ts-node": "^10.0.0",
+    "sinon": "^14.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.1.5"
   },
   "types": "dist/",
@@ -46,9 +47,6 @@
     "extension": [
       ".ts"
     ]
-  },
-  "peerDependencies": {
-    "@curveball/core": ">=0.16.1 <1"
   },
   "engines": {
     "node": ">= 14"
@@ -69,5 +67,8 @@
     "@stoplight/better-ajv-errors": "^1.0.1",
     "ajv": "^8.4.0",
     "ajv-formats": "^2.1.0"
+  },
+  "peerDependencies": {
+    "@curveball/kernel": "^0.20.0"
   }
 }
