--- a/package.json
+++ b/package.json
@@ -69,6 +69,6 @@
     "ajv-formats": "^2.1.0"
   },
   "peerDependencies": {
-    "@curveball/kernel": "^0.20.0"
+    "@curveball/kernel": ">=0.20.0 <1"
   }
 }
