--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 /node_modules
 
 # typescript output
-/dist
+/esm
+/cjs
+
+# Directory used for running tests in CommonJS mode
+/cjs-test
 
 # vim
 .*.swp
@@ -10,5 +14,5 @@
 # nyc
 /.nyc_output
 
-# vscode
-/.vscode
+# bun!
+/bun.lockb
