--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
     "url": "git+https://github.com/curveball/validator.git"
   },
   "dependencies": {
-    "@curveball/controller": "^0.5.0",
+    "@curveball/controller": "^1.0.0",
     "@curveball/http-errors": "^0.5.0",
-    "@curveball/links": "^0.3.0",
+    "@curveball/links": "^1.0.0",
     "@stoplight/better-ajv-errors": "^1.0.1",
     "ajv": "^8.4.0",
     "ajv-formats": "^2.1.0"
   },
   "peerDependencies": {
-    "@curveball/kernel": ">=0.21.0 <1"
+    "@curveball/kernel": "^1"
   },
   "devDependencies": {
-    "@curveball/bodyparser": "^0.6.1",
-    "@curveball/kernel": "^0.21.0",
+    "@curveball/bodyparser": "^1.0.0",
+    "@curveball/kernel": "^1.0.0",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^10.0.1",
     "@types/node": "^16.18.12",
